# TutorFlow

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.local.example.md  AGENTS.md  CMakeLists.txt  README.md  docker-compose.prod.local-build.yml  docker-compose.prod.yml  docker-compose.scale.yml  docker-compose.yml  requirements-dev.txt
libs/clients/: CMakeLists.txt
libs/clients/src/: grpc_client_base.cpp  grpc_server_utils.cpp  identity_client.cpp  identity_grpc_client.cpp
libs/common/: CMakeLists.txt  README.md
libs/common/src/: auth_context.cpp  errors.cpp  handler_helpers.cpp  health_handler.cpp  http_client_base.cpp  jwt.cpp  request_context.cpp
libs/events/: CMakeLists.txt
libs/events/src/: event_consumer.cpp  event_envelope.cpp  event_publisher.cpp  outbox_publisher.cpp  outbox_statistics.cpp
libs/events/tests/: outbox_statistics_test.cpp
libs/proto/: CMakeLists.txt
libs/proto/tutorflow/: assignment.proto  chat.proto  common.proto  finance.proto  identity.proto  lesson.proto  notification.proto  report.proto
services/api-gateway/: CMakeLists.txt  Dockerfile  README.md
services/api-gateway/configs/: static_config.yaml
services/api-gateway/src/: cors.cpp  cors.hpp  gateway_settings.cpp  gateway_settings.hpp  main.cpp
services/api-gateway/src/clients/: assignment_grpc_client.cpp  assignment_grpc_client.hpp  chat_grpc_client.cpp  chat_grpc_client.hpp  finance_grpc_client.cpp  finance_grpc_client.hpp  identity_grpc_client.cpp  identity_grpc_client.hpp  json_helpers.hpp  lesson_grpc_client.cpp  lesson_grpc_client.hpp  notification_grpc_client.cpp  notification_grpc_client.hpp  report_grpc_client.cpp  report_grpc_client.hpp
services/api-gateway/src/handlers/: health_handler.cpp  health_handler.hpp  proxy_handlers.cpp  proxy_handlers.hpp  ready_handler.cpp  ready_handler.hpp
services/assignment-service/: CMakeLists.txt  Dockerfile  README.md
services/assignment-service/configs/: static_config.yaml
services/assignment-service/src/: main.cpp
services/assignment-service/src/clients/: identity_client.cpp  identity_client.hpp
services/assignment-service/src/domain/: assignment_service.cpp  assignment_service.hpp  models.cpp  models.hpp
services/assignment-service/src/grpc/: assignment_grpc_service.cpp  assignment_grpc_service.hpp
services/assignment-service/src/handlers/: assignment_handlers.cpp  assignment_handlers.hpp  ready_handler.cpp  ready_handler.hpp
services/assignment-service/src/outbox/: outbox_publisher.cpp  outbox_publisher.hpp
services/assignment-service/src/repositories/: assignment_repository.cpp  assignment_repository.hpp
services/assignment-service/src/workers/: deadline_worker.cpp  deadline_worker.hpp
services/chat-service/: CMakeLists.txt  Dockerfile  README.md
services/chat-service/configs/: secdist.json  static_config.yaml
services/chat-service/src/: main.cpp
services/chat-service/src/domain/: chat_service.cpp  chat_service.hpp  models.hpp
services/chat-service/src/grpc/: chat_grpc_service.cpp  chat_grpc_service.hpp
services/chat-service/src/handlers/: ready_handler.cpp  ready_handler.hpp
services/chat-service/src/outbox/: outbox_publisher.cpp  outbox_publisher.hpp
services/chat-service/src/repositories/: chat_repository.cpp  chat_repository.hpp  dialog_merge.cpp  dialog_merge.hpp  shard_router.cpp  shard_router.hpp
services/chat-service/tests/: dialog_merge_test.cpp  shard_router_test.cpp
services/file-service/: CMakeLists.txt  Dockerfile  README.md
services/file-service/configs/: static_config.yaml
services/file-service/src/: main.cpp
services/file-service/src/clients/: identity_client.cpp  identity_client.hpp
services/file-service/src/domain/: file_service.cpp  file_service.hpp  models.cpp  models.hpp
services/file-service/src/handlers/: file_handlers.cpp  file_handlers.hpp  ready_handler.cpp  ready_handler.hpp
services/file-service/src/repositories/: file_repository.cpp  file_repository.hpp
services/file-service/src/storages/: file_storage.cpp  file_storage.hpp  s3_file_storage.cpp  s3_file_storage.hpp  s3_sigv4_authenticator.cpp  s3_sigv4_authenticator.hpp
services/file-service/tests/: s3_file_storage_test.cpp  s3_sigv4_authenticator_test.cpp
services/finance-service/: CMakeLists.txt  Dockerfile  README.md
services/finance-service/configs/: static_config.yaml
services/finance-service/src/: main.cpp
services/finance-service/src/clients/: identity_client.cpp  identity_client.hpp
services/finance-service/src/consumers/: lesson_completed_consumer.cpp  lesson_completed_consumer.hpp
services/finance-service/src/domain/: finance_service.cpp  finance_service.hpp  models.cpp  models.hpp
services/finance-service/src/grpc/: finance_grpc_service.cpp  finance_grpc_service.hpp
services/finance-service/src/handlers/: finance_handlers.cpp  finance_handlers.hpp  ready_handler.cpp  ready_handler.hpp
services/finance-service/src/outbox/: outbox_publisher.cpp  outbox_publisher.hpp
services/finance-service/src/repositories/: finance_repository.cpp  finance_repository.hpp
services/identity-service/: CMakeLists.txt  Dockerfile  README.md
services/identity-service/configs/: static_config.yaml
services/identity-service/src/: main.cpp
services/identity-service/src/domain/: identity_service.cpp  identity_service.hpp  (+2 more)
services/lesson-service/: CMakeLists.txt  Dockerfile  README.md
services/lesson-service/configs/: static_config.yaml
services/lesson-service/src/: main.cpp
services/notification-service/: CMakeLists.txt  Dockerfile  README.md
services/notification-service/configs/: secdist.json  static_config.yaml
services/notification-service/src/: main.cpp
services/realtime-service/: CMakeLists.txt  Dockerfile  README.md
services/realtime-service/configs/: secdist.json  static_config.yaml
services/realtime-service/src/: main.cpp
services/realtime-service/tests/: outbound_queue_test.cpp
services/report-service/: CMakeLists.txt  Dockerfile  README.md
services/report-service/configs/: static_config.yaml
services/report-service/src/: main.cpp
(+307 files in other folders)
